fix: improve close thread button alignment

--- a/src/v2/styles/Thread/Thread-layout.scss
+++ b/src/v2/styles/Thread/Thread-layout.scss
@@ -23,7 +23,7 @@
 
     .str-chat__close-thread-button {
       $icon-size: calc(var(--str-chat__spacing-px) * 21);
-      @include utils.flex-row-center;
+      @include utils.flex-top-right;
       width: calc(var(--str-chat__spacing-px) * 40);
       height: calc(var(--str-chat__spacing-px) * 40);
       cursor: pointer;
